--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,7 +5,7 @@
 # Learn more from ready-to-use templates: https://www.gitpod.io/docs/introduction/getting-started/quickstart
 
 tasks:
-  - init: pnpm install && pnpm run compile
-    command: pnpm run start
+  - before: npm install -g bun
+  - init: bun install
 
 
