--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,7 +26,8 @@
         "fsharp": "fsi",
         "csharp": "scriptcs",
         "vbscript": "cscript //Nologo",
-        "typescript": "bun",
+        // "typescript": "node --experimental-specifier-resolution=node --loader ts-node/esm",
+        "typescript": "ts-node --logError --esm",
         "coffeescript": "coffee",
         "scala": "scala",
         "swift": "swift",
