--- a/package.json
+++ b/package.json
@@ -3,19 +3,22 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "start": "bun index.ts"
+    "start": " index.ts"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "@types/node": "^20.6.2"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
     "@logtail/pino": "^0.4.12",
-    "@types/pino": "^7.0.5",
+    "dotenv": "^16.3.1",
     "node-html-parser": "^6.1.10",
-    "pino": "https://github.com/iamrony777/pino",
-    "pino-pretty": "^10.2.0"
+    "pino": "^8.15.1",
+    "pino-pretty": "^10.2.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2",
+    "undici": "^5.24.0"
   }
 }
