--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "start": " index.ts"
+    "start": "ts-node --esm --logError index.ts"
   },
   "devDependencies": {
-    "@types/node": "^20.6.2"
+    "@types/got": "^9.6.12",
+    "@types/node": "^20.6.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  },
+  "peerDependencies": {},
   "dependencies": {
     "@logtail/pino": "^0.4.12",
     "dotenv": "^16.3.1",
+    "got": "^13.0.0",
+    "http2-wrapper": "^2.2.0",
     "node-html-parser": "^6.1.10",
     "pino": "^8.15.1",
-    "pino-pretty": "^10.2.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2",
-    "undici": "^5.24.0"
+    "pino-pretty": "^10.2.0"
   }
 }
