--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,8 @@
         "outDir": "dist",
         "pretty": true,
         "declaration": true,
-        "declarationDir": "dist/types"
+        "declarationDir": "dist/types",
+        "removeComments": true
     },
     "exclude": [
         "node_modules/*",
